<?xml version="1.0" encoding="utf-8"?>
<!--Resource used for figuring out ConstraintLayout...-->
<!--https://www.youtube.com/watch?v=XamMbnzI5vE-->
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MovieDetailActivity"
    >

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/backdrop_image"/>

        <ImageView
            android:id="@+id/movie_poster_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop_image"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favourite_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:clickable="true"
            android:contentDescription="@string/favourite_button_description"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/movie_backdrop_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_off"/>


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:scrollHorizontally="false"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop_image"/>

        <RatingBar
            android:id="@+id/movie_user_rating"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"/>

        <!--Left this in because I'm not certain I like the ratingBar. Might revert back to-->
        <!--text on next phase of the project-->

        <!--<TextView-->
        <!--android:id="@+id/movie_user_rating"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:textSize="16sp"-->
        <!--android:text="User Rating"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.2"-->
        <!--app:layout_constraintStart_toEndOf="@+id/movie_poster_image"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/movie_title"/>-->

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_user_rating"/>

        <TextView
            android:id="@+id/summaryTv"
            style="@style/MovieDetailHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_image" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/summaryTv"/>

        <TextView
            android:id="@+id/movie_trailer_tv"
            style="@style/MovieDetailHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            app:layout_constraintEnd_toStartOf="@+id/movie_release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_trailer_tv"/>

        <TextView
            android:id="@+id/reviewHeaderTv"
            style="@style/MovieDetailHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/review"
            app:layout_constraintBottom_toTopOf="@+id/rv_movie_reviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_movie_trailers"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_reviews"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewHeaderTv"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
